Bug 426339 - Scout Luna SDK on Java 8
https://bugs.eclipse.org/bugs/show_bug.cgi?id=426339

Support for Java 8

Change-Id: I81495d8cf648fed17703ecc821500b2f153df5e7
Reviewed-on: https://git.eclipse.org/r/21604
Tested-by: Hudson CI
Reviewed-by: Matthias Villiger <mvi@bsiag.com>
IP-Clean: Matthias Villiger <mvi@bsiag.com>