@@ -26,6 +26,7 @@ import org.eclipse.jdt.launching.IVMInstall;
 import org.eclipse.jdt.launching.JavaRuntime;
 import org.eclipse.jdt.launching.environments.IExecutionEnvironment;
 import org.eclipse.pde.internal.core.ICoreConstants;
+import org.eclipse.scout.commons.StringUtility;
 import org.eclipse.scout.sdk.ScoutSdkCore;
 import org.eclipse.scout.sdk.internal.ScoutSdk;
 import org.eclipse.scout.sdk.jobs.OperationJob;
@@ -165,14 +166,17 @@ public class ScoutProjectNewOperation extends AbstractScoutProjectNewOperation {
   }
 
   protected String computeExecutionEnvironment() {
-
+    // defaults
     String execEnv = EXEC_ENV_PREFIX + MIN_JVM_VERSION;
+    double execEnvVersion = getExecEnvVersion(execEnv);
+
     IVMInstall defaultVm = JavaRuntime.getDefaultVMInstall();
     if (defaultVm != null) {
       for (IExecutionEnvironment env : JavaRuntime.getExecutionEnvironmentsManager().getExecutionEnvironments()) {
         String executionEnvId = env.getId();
-        if (executionEnvId.startsWith(EXEC_ENV_PREFIX) && env.isStrictlyCompatible(defaultVm)) {
-          if (executionEnvId.compareTo(execEnv) > 0) {
+        if (env.isStrictlyCompatible(defaultVm)) {
+          double envVersion = getExecEnvVersion(executionEnvId);
+          if (envVersion > execEnvVersion) {
             execEnv = executionEnvId; // take the newest
           }
         }
@@ -181,8 +185,31 @@ public class ScoutProjectNewOperation extends AbstractScoutProjectNewOperation {
     return execEnv;
   }
 
+  protected double getExecEnvVersion(String executionEnvId) {
+    if (executionEnvId != null && executionEnvId.startsWith(EXEC_ENV_PREFIX)) {
+      String numPart = executionEnvId.substring(EXEC_ENV_PREFIX.length());
+      if (StringUtility.hasText(numPart)) {
+        try {
+          double ret = Double.parseDouble(numPart);
+          return ret;
+        }
+        catch (NumberFormatException e) {
+          //nop
+        }
+      }
+    }
+    return -1.0;
+  }
+
   protected void putInitialProperties() {
-    getProperties().setProperty(PROP_EXEC_ENV, computeExecutionEnvironment());
+    String javaExecEnvId = computeExecutionEnvironment();
+    String maxPermSize = "";
+    if (getExecEnvVersion(javaExecEnvId) < 1.8) {
+      maxPermSize = "-XX:MaxPermSize=256m";
+    }
+
+    getProperties().setProperty(PROP_EXEC_ENV, javaExecEnvId);
+    getProperties().setProperty(PROP_MAX_PERM_SIZE, maxPermSize);
     getProperties().setProperty(PROP_OS, ScoutSdk.getDefault().getBundle().getBundleContext().getProperty(ICoreConstants.OSGI_OS));
     getProperties().setProperty(PROP_WS, ScoutSdk.getDefault().getBundle().getBundleContext().getProperty(ICoreConstants.OSGI_WS));
     getProperties().setProperty(PROP_ARCH, ScoutSdk.getDefault().getBundle().getBundleContext().getProperty(ICoreConstants.OSGI_ARCH));
